apps/manifests/thinkdashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thinkdashboard
  namespace: thinkdashboard
  labels:
    app: thinkdashboard
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: thinkdashboard
